# directview-led-software-toolkit

./: README.md  build.sh  meson.build  meson_options.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/actions/analysis/afl-fuzz/: action.yml
.github/actions/analysis/checksec/: action.yml
.github/actions/analysis/coverity/: action.yml
.github/actions/analysis/cppcheck/: action.yml
.github/actions/analysis/gitleaks/: action.yml
.github/actions/analysis/libfuzzer/: action.yml
.github/actions/analysis/shellcheck/: action.yml
.github/actions/analysis/trivy/: action.yml
.github/actions/analysis/zizmor/: action.yml
.github/actions/build-dvledtx/: action.yml
.github/actions/environment-check/: action.yml
.github/actions/smoke-tests/: action.yml
.github/actions/static-analysis/: action.yml
.github/actions/unit-tests/: action.yml
.github/workflows/: ci.yml  codeql.yml  coverity.yml  daily_build.yml  fuzz.yml  libfuzzer.yml  pull_request.yml  scan_on_demand.yml  scorecard.yml  trivy.yml
config/: tx_1session.json  tx_1session_12bit.json  tx_2k_multi_session.json  tx_2k_single_session.json  tx_3sessions.json  tx_4k_multi_session.json  tx_4k_single_session.json  tx_fullhd_multi_nic.json  tx_fullhd_multi_session.json  tx_fullhd_screen_capture.json  tx_fullhd_screen_capture_multi_session.json  tx_fullhd_single_session.json  tx_fullhd_virtual_display.json
fuzz/: fuzz_config_reader.c  fuzz_config_reader_libfuzzer.c
fuzz/corpus/: multi_session.json  valid_config.json
include/: app_context.h  config_reader.h  ffmpeg_decoder.h  session_manager.h  tx_app_context.h
include/core/: session_manager.h
include/ffmpeg/: ffmpeg_decoder.h  ffmpeg_tx.h
include/mtl/: mtl_tx.h
include/util/: config_reader.h  logger.h
script/: run.sh
scripts/: build.sh  run.sh  test.sh
scripts/patches/: 0001-Patch-mtl_st20p_tx-for-colour-format-additional-supp.patch
scripts/setup/: build_mtl_ubuntu.sh  build_mtl_ubuntu_steps.md
src/: config_reader.c  main.c  session_manager.c  tx_app_main.c
src/core/: session_manager.c
src/ffmpeg/: ffmpeg_decoder.c  ffmpeg_tx.c
src/mtl/: mtl_tx.c
src/util/: config_reader.c  logger.c
tests/: meson.build  test_config_reader.c  test_ffmpeg_decoder.c  test_ffmpeg_decoder_mock.c  test_ffmpeg_tx.c  test_ffmpeg_tx_mock.c  test_ffmpeg_watchdog.c  test_logger.c  test_main.c  test_mtl_tx.c  test_session_manager.c
